<resources>
    <string name="app_name">API Practice</string>

    <!--  Bottom Navigation Item Strings  -->
    <string name="find">find</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>

    <!--  Common Strings  -->
    <string name="logged_out">Logged Out</string>
    <string name="login_successful">Login Successful</string>
    <string name="country_code_format">+91 %1$s</string>
    <string name="welcome_to_medoplus">Welcome to Medoplus</string>
    <string name="choose_image_source">Choose Image Source</string>
    <string name="error_message">Error Message</string>
    <string name="error_title">Oops</string>
    <string name="ok">OK</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_relevant_app">No relevant app found</string>
    <string name="storage_permission_denied">Storage Permission Denied. Please allow storage permission to choose image.</string>
    <string name="camera_permission_denied">Camera Permission Denied. Please allow camera permission to take picture.</string>
    <string name="permission_required">Permission Required</string>
    <string name="provide_permission">Please allow permission(s) to continue operation</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="dismiss">Dismiss</string>

    <!--  Dummy Strings  -->
    <string name="address_sample">Vill Budpur Mufti Post Barampur Bhojpur Kiratpur District Bijnor Uttar Pradesh 246731, India</string>
    <string name="harshit_kumar">Harshit Kumar</string>
    <string name="phone_number_sample">+91 7037302671</string>

    <!-- Login Fragment UI Strings -->
    <string name="accept_terms_privacy_text"><![CDATA[By logging in, you agree to our T&C and Privacy Policy.]]></string>
    <string name="terms_condition_key">T&amp;C</string>
    <string name="privacy_policy_key">Privacy Policy</string>
    <string name="successfully_logged_in">Successfully Logged In</string>
    <string name="unique_id">Unique ID</string>
    <string name="unique_id_hint">V3612MA10001</string>
    <string name="password_hint">**********</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="please_enter_medoID">Please enter MedoPlus ID</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="invalid_password">Invalid Password</string>

    <!-- Profile Fragment Strings -->
    <string name="profile_details">Profile Details</string>
    <string name="edit">Edit</string>
    <string name="edit_details">Edit Details</string>
    <string name="date_of_birth_">Date of Birth:</string>
    <string name="blood_group">Blood Group</string>
    <string name="medoplus_id">MedoPlus ID:</string>
    <string name="_1st_alternate_number">1st alternate Number:</string>
    <string name="_2nd_alternate_number">2nd alternate Number:</string>
    <string name="address">Address</string>
    <string name="change_password">Change Password</string>

    <!-- Home Fragment Strings -->
    <string name="log_out">Log out</string>

    <!-- Edit Profile Fragment Strings -->
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="last_name">Last  Name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="enter_address">Enter address</string>
    <string name="address_line_2">Address Line 2*</string>
    <string name="pin_code">Pin Code*</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="state">State*</string>
    <string name="enter_state">Enter state</string>
    <string name="district">District*</string>
    <string name="enter_district">Enter district</string>
    <string name="block">Block*</string>
    <string name="enter_block">Enter block</string>
    <string name="__1st_alternate_number">1st Alternate Number</string>
    <string name="enter_1st_alternate_number">Enter 1st alternate number</string>
    <string name="__2nd_alternate_number">2nd Alternate Number</string>
    <string name="enter_2nd_alternate_number">Enter 2nd alternate number</string>
    <string name="blood_group_">Blood Group</string>
    <string name="enter_blood_group">Enter blood group</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="select_address">Select Address</string>

</resources>