<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.apipractice.view.fragments.profile.editprofile.EditProfileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/basicDetailTextView"
                    style="@style/TextViewStyle.MEDIUM"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@color/colorBlue"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/edit_profile"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutConstraint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/basicDetailTextView">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/firstNameTextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/first_name"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstNameEditText"
                        style="@style/EditTextStyle"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:hint="@string/enter_first_name"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/firstNameTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/lastNameTextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/last_name"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/firstNameEditText" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameEditText"
                        style="@style/EditTextStyle"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:hint="@string/enter_last_name"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/lastNameTextView"
                        app:layout_constraintTop_toBottomOf="@id/lastNameTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/dateOfBirthTextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lastNameEditText" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/dobInfoImageView"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="@dimen/_4sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/dateOfBirthTextView"
                        app:layout_constraintStart_toEndOf="@+id/dateOfBirthTextView"
                        app:layout_constraintTop_toTopOf="@+id/dateOfBirthTextView"
                        app:srcCompat="@drawable/ic_info" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/dobValueTextView"
                        style="@style/EditTextStyle"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:gravity="center_vertical"
                        android:hint="@string/dd_mm_yyyy"
                        android:textColorHint="?attr/colorControlHighlight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/dateOfBirthTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/addressLine1TextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/address_line_1"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/dobValueTextView"
                        tools:text="Address Line 1*" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressLine1TextViewValue"
                        style="@style/EditTextStyle"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_address"
                        android:textColorHint="?attr/colorControlHighlight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_min="@dimen/_40sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/addressLine1TextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/addressLine2TextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/address_line_2"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/addressLine1TextViewValue"
                        tools:text="Address Line 2*" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressLine2EditText"
                        style="@style/EditTextStyle"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:hint="@string/enter_address"
                        android:inputType="textMultiLine"
                        android:maxLines="4"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:textColorHint="?attr/colorControlHighlight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/addressLine2TextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/pinCodeTextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/pin_code"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/addressLine2EditText" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pinCodeEditText"
                        style="@style/EditTextStyle"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:hint="@string/enter_pin_code"
                        android:inputType="number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pinCodeTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/stateTextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/state"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pinCodeEditText" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/statetextSpinner"
                        style="@style/EditTextStyle"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_state"
                        android:textColorHint="?attr/colorControlHighlight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/stateTextView"
                        app:layout_constraintTop_toBottomOf="@id/stateTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/districtTextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/district"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/statetextSpinner" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/districtTextSpinner"
                        style="@style/EditTextStyle"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_district"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/districtTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/blockTextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/block"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/districtTextSpinner" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/blockTextSpinner"
                        style="@style/EditTextStyle"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_block"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/blockTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/firstAlternateNoTextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/__1st_alternate_number"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/blockTextSpinner" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstAlternateNoEditText"
                        style="@style/EditTextStyle"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:hint="@string/enter_1st_alternate_number"
                        android:inputType="number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/firstAlternateNoTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/secondAlternateNoTextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/__2nd_alternate_number"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/firstAlternateNoEditText" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/secondAlternateNoEditText"
                        style="@style/EditTextStyle"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:hint="@string/enter_2nd_alternate_number"
                        android:inputType="number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/secondAlternateNoTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/bloodGroupTextView"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/blood_group_"
                        android:textColor="@color/colorOnDarkBlue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/secondAlternateNoEditText" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bloodTextSpinner"
                        style="@style/EditTextStyle"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_blood_group"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bloodGroupTextView" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancelButton"
                        style="@style/ButtonStyle.Outline.Red"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:text="@string/cancel"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/updateButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bloodTextSpinner" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/updateButton"
                        style="@style/ButtonStyle"
                        android:backgroundTint="@color/colorBlue"
                        android:text="@string/update"
                        app:layout_constraintBaseline_toBaselineOf="@id/cancelButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/cancelButton" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>