<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.apipractice.view.fragments.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_16sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                style="@style/LogoStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                app:layout_constraintBottom_toTopOf="@id/medoPlusIdTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/medoPlusIdTextView"
                style="@style/TextViewStyle.MEDIUM"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/unique_id"
                app:layout_constraintBottom_toTopOf="@id/medoPlusIdEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/medoPlusIdEditText"
                style="@style/EditTextStyle"
                android:layout_marginBottom="@dimen/_16sdp"
                android:hint="@string/unique_id_hint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@id/PasswordTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/PasswordTextView"
                style="@style/TextViewStyle.MEDIUM"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@id/passwordEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/EditTextStyle"
                android:layout_marginBottom="@dimen/_14sdp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@id/forgotPasswordTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forgotPasswordTextView"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/_24sdp"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorMidBlue"
                app:layout_constraintBottom_toTopOf="@id/term_conditions_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/term_conditions_text_view"
                style="@style/TextViewStyle.REGULAR"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/accept_terms_privacy_text"
                android:textColor="@color/colorOnDarkBlue"
                app:layout_constraintBottom_toTopOf="@id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/ButtonStyle"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/login"
                app:layout_constraintBottom_toTopOf="@id/signUpButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpButton"
                style="@style/ButtonStyle.Outline"
                android:text="@string/signup"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>